# ai_git_pre_commit

./: .gitignore  Cargo.toml  README.md  build-all.sh  hook_test.js
.cargo/: config.toml
src/: ai.rs  cli.rs  commands.rs  config.rs  git.rs  main.rs  prompts.rs
