[package]
name = "ai_git_pre_commit"
version = "0.1.0"
edition = "2021"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
dotenv = "0.15"
anyhow = "1.0"
colored = "2.0" # For nice output
clap = { version = "4.5.53", features = ["derive"] }
